--- a/references.html
+++ b/references.html
@@ -80,21 +80,26 @@
 <li class="part"><span><b>I Background</b></span></li>
 <li class="chapter" data-level="2" data-path="biomechanics-101.html"><a href="biomechanics-101.html"><i class="fa fa-check"></i><b>2</b> Biomechanics 101</a></li>
 <li class="chapter" data-level="3" data-path="triple-jump.html"><a href="triple-jump.html"><i class="fa fa-check"></i><b>3</b> Triple Jump</a><ul>
-<li class="chapter" data-level="3.1" data-path="key-performance-indicators.html"><a href="key-performance-indicators.html"><i class="fa fa-check"></i><b>3.1</b> Key Performance Indicators</a></li>
+<li class="chapter" data-level="3.1" data-path="phase-ratio.html"><a href="phase-ratio.html"><i class="fa fa-check"></i><b>3.1</b> Phase ratio</a></li>
+<li class="chapter" data-level="3.2" data-path="velocities.html"><a href="velocities.html"><i class="fa fa-check"></i><b>3.2</b> Velocities</a></li>
+<li class="chapter" data-level="3.3" data-path="take-off-leg-mechanics.html"><a href="take-off-leg-mechanics.html"><i class="fa fa-check"></i><b>3.3</b> Take-off leg mechanics</a></li>
+<li class="chapter" data-level="3.4" data-path="free-limb-mechanics.html"><a href="free-limb-mechanics.html"><i class="fa fa-check"></i><b>3.4</b> Free limb mechanics</a></li>
+<li class="chapter" data-level="3.5" data-path="balance.html"><a href="balance.html"><i class="fa fa-check"></i><b>3.5</b> Balance</a></li>
+<li class="chapter" data-level="3.6" data-path="gender-differences.html"><a href="gender-differences.html"><i class="fa fa-check"></i><b>3.6</b> Gender differences</a></li>
 </ul></li>
+<li class="chapter" data-level="4" data-path="kpi-overview.html"><a href="kpi-overview.html"><i class="fa fa-check"></i><b>4</b> KPI Overview</a></li>
 <li class="part"><span><b>II Results</b></span></li>
-<li class="chapter" data-level="4" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i><b>4</b> Introduction</a><ul>
-<li class="chapter" data-level="4.1" data-path="key-performance-indicators-1.html"><a href="key-performance-indicators-1.html"><i class="fa fa-check"></i><b>4.1</b> Key Performance Indicators</a></li>
-<li class="chapter" data-level="4.2" data-path="center-of-mass-velocity.html"><a href="center-of-mass-velocity.html"><i class="fa fa-check"></i><b>4.2</b> Center of Mass Velocity</a><ul>
-<li class="chapter" data-level="4.2.1" data-path="center-of-mass-velocity.html"><a href="center-of-mass-velocity.html#horizontal-velocity"><i class="fa fa-check"></i><b>4.2.1</b> Horizontal velocity</a></li>
-<li class="chapter" data-level="4.2.2" data-path="center-of-mass-velocity.html"><a href="center-of-mass-velocity.html#vertical-velocity"><i class="fa fa-check"></i><b>4.2.2</b> Vertical velocity</a></li>
+<li class="chapter" data-level="5" data-path="overview.html"><a href="overview.html"><i class="fa fa-check"></i><b>5</b> Overview</a><ul>
+<li class="chapter" data-level="5.1" data-path="center-of-mass-velocity.html"><a href="center-of-mass-velocity.html"><i class="fa fa-check"></i><b>5.1</b> Center of Mass Velocity</a><ul>
+<li class="chapter" data-level="5.1.1" data-path="center-of-mass-velocity.html"><a href="center-of-mass-velocity.html#horizontal-velocity"><i class="fa fa-check"></i><b>5.1.1</b> Horizontal velocity</a></li>
+<li class="chapter" data-level="5.1.2" data-path="center-of-mass-velocity.html"><a href="center-of-mass-velocity.html#vertical-velocity"><i class="fa fa-check"></i><b>5.1.2</b> Vertical velocity</a></li>
 </ul></li>
-<li class="chapter" data-level="4.3" data-path="angular-velocity.html"><a href="angular-velocity.html"><i class="fa fa-check"></i><b>4.3</b> Angular Velocity</a><ul>
-<li class="chapter" data-level="4.3.1" data-path="angular-velocity.html"><a href="angular-velocity.html#hip-velocity"><i class="fa fa-check"></i><b>4.3.1</b> Hip velocity</a></li>
+<li class="chapter" data-level="5.2" data-path="angular-velocity.html"><a href="angular-velocity.html"><i class="fa fa-check"></i><b>5.2</b> Angular Velocity</a><ul>
+<li class="chapter" data-level="5.2.1" data-path="angular-velocity.html"><a href="angular-velocity.html#hip-velocity"><i class="fa fa-check"></i><b>5.2.1</b> Hip velocity</a></li>
 </ul></li>
-<li class="chapter" data-level="4.4" data-path="ground-reaction-forces.html"><a href="ground-reaction-forces.html"><i class="fa fa-check"></i><b>4.4</b> Ground Reaction Forces</a></li>
+<li class="chapter" data-level="5.3" data-path="ground-reaction-forces.html"><a href="ground-reaction-forces.html"><i class="fa fa-check"></i><b>5.3</b> Ground Reaction Forces</a></li>
 </ul></li>
-<li class="chapter" data-level="5" data-path="conclusion.html"><a href="conclusion.html"><i class="fa fa-check"></i><b>5</b> Conclusion</a></li>
+<li class="chapter" data-level="6" data-path="conclusion.html"><a href="conclusion.html"><i class="fa fa-check"></i><b>6</b> Conclusion</a></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 </ul>
 
@@ -120,11 +125,11 @@
 <div id="ref-Hay1993">
 <p>1. J. G. Hay, Citius, altius, longius (faster, higher, longer): The biomechanics of jumping for distance. <em>Journal of Biomechanics</em>, <strong>26</strong> (1993) 7–21. <a href="https://doi.org/10.1016/0021-9290(93)90076-Q">https://doi.org/10.1016/0021-9290(93)90076-Q</a>.</p>
 </div>
-<div id="ref-Bae2011">
-<p>2. Y.-S. Bae, Biomechanics Research Project Team in the IAAF World Championships Daegu 2011. (2011).</p>
-</div>
 <div id="ref-Hommel2009">
-<p>3. H. Hommel, <em>Scientific Research Project Biomechanical Analyses Berlin 2009 Triple Jump</em> (2009).</p>
+<p>2. H. Hommel, <em>Scientific Research Project Biomechanical Analyses Berlin 2009 Triple Jump</em> (2009).</p>
+</div>
+<div id="ref-Bae2011">
+<p>3. Y.-S. Bae, Biomechanics Research Project Team in the IAAF World Championships Daegu 2011. (2011).</p>
 </div>
 <div id="ref-Tucker2017">
 <p>4. C. Tucker, G. Nicholson, M. Cooke, M. Cooke, L. Sutton, L. Lawton, M. Cooke, M. Hopkinson, J. French, &amp; J. Webber, <em>BIOMECHANICAL REPORT LONDON 2017 Triple Jump Men’s</em> (2017).</p>
@@ -159,17 +164,17 @@
 <div id="ref-Ramey1985">
 <p>14. M. R. Ramey &amp; K. R. Williams, Ground Reaction Forces in the Triple Jump. <em>International Journal of Sport Biomechanics</em>, <strong>1</strong> (1985) 233–239. <a href="https://doi.org/10.1123/ijsb.1.3.233">https://doi.org/10.1123/ijsb.1.3.233</a>.</p>
 </div>
-<div id="ref-Yu1998">
-<p>15. B. Yu &amp; J. G. Andrews, The relationship between free limb motions and performance in the triple jump. <em>Journal of Applied Biomechanics</em>, <strong>14</strong> (1998) 223–237. <a href="https://doi.org/10.1123/jab.14.2.223">https://doi.org/10.1123/jab.14.2.223</a>.</p>
-</div>
-<div id="ref-Allen2010">
-<p>16. S. J. Allen, M. A. King, &amp; M. R. Yeadon, Is a single or double arm technique more advantageous in triple jumping? <em>Journal of Biomechanics</em>, <strong>43</strong> (2010) 3156–3161. <a href="https://doi.org/10.1016/j.jbiomech.2010.07.030">https://doi.org/10.1016/j.jbiomech.2010.07.030</a>.</p>
-</div>
 <div id="ref-Dziewiecki2013">
-<p>17. K. Dziewiecki, Z. Mazur, &amp; W. Blajer, Assessment of external and internal loads in the triple jump via inverse dynamics simulation. <em>Biology of Sport</em>, <strong>30</strong> (2013) 103–109. <a href="https://doi.org/10.5604/20831862.1044225">https://doi.org/10.5604/20831862.1044225</a>.</p>
+<p>15. K. Dziewiecki, Z. Mazur, &amp; W. Blajer, Assessment of external and internal loads in the triple jump via inverse dynamics simulation. <em>Biology of Sport</em>, <strong>30</strong> (2013) 103–109. <a href="https://doi.org/10.5604/20831862.1044225">https://doi.org/10.5604/20831862.1044225</a>.</p>
 </div>
 <div id="ref-Dziewiecki2014">
-<p>18. K. Dziewiecki, W. Blajer, Z. Mazur, &amp; A. Czaplicki, Modeling and computational issues in the inverse dynamics simulation of triple jump. <em>Multibody System Dynamics</em>, <strong>32</strong> (2014) 299–316. <a href="https://doi.org/10.1007/s11044-013-9375-6">https://doi.org/10.1007/s11044-013-9375-6</a>.</p>
+<p>16. K. Dziewiecki, W. Blajer, Z. Mazur, &amp; A. Czaplicki, Modeling and computational issues in the inverse dynamics simulation of triple jump. <em>Multibody System Dynamics</em>, <strong>32</strong> (2014) 299–316. <a href="https://doi.org/10.1007/s11044-013-9375-6">https://doi.org/10.1007/s11044-013-9375-6</a>.</p>
+</div>
+<div id="ref-Yu1998">
+<p>17. B. Yu &amp; J. G. Andrews, The relationship between free limb motions and performance in the triple jump. <em>Journal of Applied Biomechanics</em>, <strong>14</strong> (1998) 223–237. <a href="https://doi.org/10.1123/jab.14.2.223">https://doi.org/10.1123/jab.14.2.223</a>.</p>
+</div>
+<div id="ref-Allen2010">
+<p>18. S. J. Allen, M. A. King, &amp; M. R. Yeadon, Is a single or double arm technique more advantageous in triple jumping? <em>Journal of Biomechanics</em>, <strong>43</strong> (2010) 3156–3161. <a href="https://doi.org/10.1016/j.jbiomech.2010.07.030">https://doi.org/10.1016/j.jbiomech.2010.07.030</a>.</p>
 </div>
 <div id="ref-Hay1992">
 <p>19. J. G. Hay, The biomechanics of the triple jump: A review. <em>Journal of Sports Sciences</em>, <strong>10</strong> (1992) 343–378. <a href="https://doi.org/10.1080/02640419208729933">https://doi.org/10.1080/02640419208729933</a>.</p>
