--- a/triple-jump.html
+++ b/triple-jump.html
@@ -30,7 +30,7 @@
   
   
 <link rel="prev" href="biomechanics-101.html"/>
-<link rel="next" href="key-performance-indicators.html"/>
+<link rel="next" href="phase-ratio.html"/>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-bookdown.css" rel="stylesheet" />
@@ -80,21 +80,26 @@
 <li class="part"><span><b>I Background</b></span></li>
 <li class="chapter" data-level="2" data-path="biomechanics-101.html"><a href="biomechanics-101.html"><i class="fa fa-check"></i><b>2</b> Biomechanics 101</a></li>
 <li class="chapter" data-level="3" data-path="triple-jump.html"><a href="triple-jump.html"><i class="fa fa-check"></i><b>3</b> Triple Jump</a><ul>
-<li class="chapter" data-level="3.1" data-path="key-performance-indicators.html"><a href="key-performance-indicators.html"><i class="fa fa-check"></i><b>3.1</b> Key Performance Indicators</a></li>
+<li class="chapter" data-level="3.1" data-path="phase-ratio.html"><a href="phase-ratio.html"><i class="fa fa-check"></i><b>3.1</b> Phase ratio</a></li>
+<li class="chapter" data-level="3.2" data-path="velocities.html"><a href="velocities.html"><i class="fa fa-check"></i><b>3.2</b> Velocities</a></li>
+<li class="chapter" data-level="3.3" data-path="take-off-leg-mechanics.html"><a href="take-off-leg-mechanics.html"><i class="fa fa-check"></i><b>3.3</b> Take-off leg mechanics</a></li>
+<li class="chapter" data-level="3.4" data-path="free-limb-mechanics.html"><a href="free-limb-mechanics.html"><i class="fa fa-check"></i><b>3.4</b> Free limb mechanics</a></li>
+<li class="chapter" data-level="3.5" data-path="balance.html"><a href="balance.html"><i class="fa fa-check"></i><b>3.5</b> Balance</a></li>
+<li class="chapter" data-level="3.6" data-path="gender-differences.html"><a href="gender-differences.html"><i class="fa fa-check"></i><b>3.6</b> Gender differences</a></li>
 </ul></li>
+<li class="chapter" data-level="4" data-path="kpi-overview.html"><a href="kpi-overview.html"><i class="fa fa-check"></i><b>4</b> KPI Overview</a></li>
 <li class="part"><span><b>II Results</b></span></li>
-<li class="chapter" data-level="4" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i><b>4</b> Introduction</a><ul>
-<li class="chapter" data-level="4.1" data-path="key-performance-indicators-1.html"><a href="key-performance-indicators-1.html"><i class="fa fa-check"></i><b>4.1</b> Key Performance Indicators</a></li>
-<li class="chapter" data-level="4.2" data-path="center-of-mass-velocity.html"><a href="center-of-mass-velocity.html"><i class="fa fa-check"></i><b>4.2</b> Center of Mass Velocity</a><ul>
-<li class="chapter" data-level="4.2.1" data-path="center-of-mass-velocity.html"><a href="center-of-mass-velocity.html#horizontal-velocity"><i class="fa fa-check"></i><b>4.2.1</b> Horizontal velocity</a></li>
-<li class="chapter" data-level="4.2.2" data-path="center-of-mass-velocity.html"><a href="center-of-mass-velocity.html#vertical-velocity"><i class="fa fa-check"></i><b>4.2.2</b> Vertical velocity</a></li>
+<li class="chapter" data-level="5" data-path="overview.html"><a href="overview.html"><i class="fa fa-check"></i><b>5</b> Overview</a><ul>
+<li class="chapter" data-level="5.1" data-path="center-of-mass-velocity.html"><a href="center-of-mass-velocity.html"><i class="fa fa-check"></i><b>5.1</b> Center of Mass Velocity</a><ul>
+<li class="chapter" data-level="5.1.1" data-path="center-of-mass-velocity.html"><a href="center-of-mass-velocity.html#horizontal-velocity"><i class="fa fa-check"></i><b>5.1.1</b> Horizontal velocity</a></li>
+<li class="chapter" data-level="5.1.2" data-path="center-of-mass-velocity.html"><a href="center-of-mass-velocity.html#vertical-velocity"><i class="fa fa-check"></i><b>5.1.2</b> Vertical velocity</a></li>
 </ul></li>
-<li class="chapter" data-level="4.3" data-path="angular-velocity.html"><a href="angular-velocity.html"><i class="fa fa-check"></i><b>4.3</b> Angular Velocity</a><ul>
-<li class="chapter" data-level="4.3.1" data-path="angular-velocity.html"><a href="angular-velocity.html#hip-velocity"><i class="fa fa-check"></i><b>4.3.1</b> Hip velocity</a></li>
+<li class="chapter" data-level="5.2" data-path="angular-velocity.html"><a href="angular-velocity.html"><i class="fa fa-check"></i><b>5.2</b> Angular Velocity</a><ul>
+<li class="chapter" data-level="5.2.1" data-path="angular-velocity.html"><a href="angular-velocity.html#hip-velocity"><i class="fa fa-check"></i><b>5.2.1</b> Hip velocity</a></li>
 </ul></li>
-<li class="chapter" data-level="4.4" data-path="ground-reaction-forces.html"><a href="ground-reaction-forces.html"><i class="fa fa-check"></i><b>4.4</b> Ground Reaction Forces</a></li>
+<li class="chapter" data-level="5.3" data-path="ground-reaction-forces.html"><a href="ground-reaction-forces.html"><i class="fa fa-check"></i><b>5.3</b> Ground Reaction Forces</a></li>
 </ul></li>
-<li class="chapter" data-level="5" data-path="conclusion.html"><a href="conclusion.html"><i class="fa fa-check"></i><b>5</b> Conclusion</a></li>
+<li class="chapter" data-level="6" data-path="conclusion.html"><a href="conclusion.html"><i class="fa fa-check"></i><b>6</b> Conclusion</a></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 </ul>
 
@@ -116,35 +121,16 @@
 <div id="triple-jump" class="section level1">
 <h1><span class="header-section-number">3</span> Triple Jump</h1>
 <p>The triple jump is one of the most demanding sporting disciplines. It consists of three consecutive jumps: a hop, step and jump. The peak ground reaction forces are the highest recorded in <em>any human movement</em>, reaching upwards of 21 times bodyweight in the step <span class="citation">[<a href="references.html#ref-Hay1993">1</a>]</span>. On top of this, the athlete still has another take-off left. That is why proper technical execution is imperative to a succesful triple jump. Here we will provide a short overview of the most important biomechanical aspects of the triple jump.</p>
-<p>Over the years, some research into the biomechanics of the triple jump has been done, mostly during the 80’s and 90’s. In addition to these there has been published a number of biomechanical reports from various World Championships over the years <span class="citation">[<a href="references.html#ref-Bae2011">2</a>–<a href="references.html#ref-Tucker2018">5</a>]</span> which provides reference values for world class performances. This body of research has been directed in a number of directions:</p>
+<p>Over the years, some research into the biomechanics of the triple jump has been done, mostly during the 80’s and 90’s. In addition to these there has been published a number of biomechanical reports from various World Championships over the years <span class="citation">[<a href="references.html#ref-Hommel2009">2</a>–<a href="references.html#ref-Tucker2018">5</a>]</span> which provides reference values for world class performances. This body of research has been directed in a number of directions:</p>
 <ol style="list-style-type: decimal">
 <li>Phase ratio <span class="citation">[<a href="references.html#ref-Allen2013">6</a>–<a href="references.html#ref-Yu1996">9</a>]</span></li>
 <li>Velocities <span class="citation">[<a href="references.html#ref-Bayraktar2017">10</a>–<a href="references.html#ref-Fukashiro1981">12</a>]</span></li>
-<li>Take-off kinetics <span class="citation">[<a href="references.html#ref-Hay1993">1</a>, <a href="references.html#ref-Fukashiro1981">12</a>–<a href="references.html#ref-Ramey1985">14</a>]</span></li>
-<li>Free limb movements <span class="citation">[<a href="references.html#ref-Yu1998">15</a>, <a href="references.html#ref-Allen2010">16</a>]</span></li>
-<li>Muscle contributions <span class="citation">[<a href="references.html#ref-Dziewiecki2013">17</a>, <a href="references.html#ref-Dziewiecki2014">18</a>]</span></li>
-<li>Gender differences</li>
+<li>Take-off leg mechanics <span class="citation">[<a href="references.html#ref-Hay1993">1</a>, <a href="references.html#ref-Fukashiro1981">12</a>–<a href="references.html#ref-Dziewiecki2014">16</a>]</span></li>
+<li>Free limb mechanics <span class="citation">[<a href="references.html#ref-Yu1998">17</a>, <a href="references.html#ref-Allen2010">18</a>]</span></li>
+<li>Balance</li>
+<li><em>Gender differences</em></li>
 </ol>
-<p><strong>Phase ratio</strong>  </p>
-<p>The phase ratio is the length of each phase relative to the total length of the triple jump (e.g. 35%, 30%, 35%). Three techniques have been described <span class="citation">[<a href="references.html#ref-Hay1992">19</a>]</span>:</p>
-<ul>
-<li><em>Hop-dominant</em>: the hop distance is at least 2% greater than the next largest phase distance.</li>
-<li><em>Jump-dominant</em>: the jump distance is at least 2% greater than the next largest phase distance.</li>
-<li><em>Balanced</em>: the longest phase distance is less than 2% greater than the next largest phase distance.</li>
-</ul>
-<p>As most variables change with technique, this is the first step of an analysis and results should be viewed in light of the technique <span class="citation">[<a href="references.html#ref-Hay1992">19</a>]</span>. Whereas the hop-dominant technique used to be favoured, in recent years athletes have transitioned to more balanced and jump-dominant techniques <span class="citation">[<a href="references.html#ref-Tucker2018">5</a>, <a href="references.html#ref-Hay1992">19</a>]</span>.
-Trying to determine the <em>optimal</em> phase ratio has received much scientific attention, however no single optimal distribution has been found. However, a descriptive picture emerges that <em>no phase should exceed 38% or be less than 27% approximately</em>. </p>
-<p><strong>Velocities</strong>  </p>
-<p><em>Horizontal velocity.</em> It has repeatedly been established that <em>the single best predictor of performance is the horizontal velocity in the run-up</em> <span class="citation">[<a href="references.html#ref-Bayraktar2017">10</a>–<a href="references.html#ref-Fukashiro1981">12</a>]</span>. Up to 94% of the results can be attributed to run-up velocity. World-class jumpers reach horizontal velocities of &gt;9.5m/s in the last step of the run-up. Interestingly, run-up horizontal velocity is a better predictor of performance than horizontal velocity at take-off <span class="citation">[<a href="references.html#ref-Bayraktar2017">10</a>]</span>. This is potentially because the run-up velocity determines the amount of mechanical energy the athlete will be able to produce in the take-off <span class="citation">[<a href="references.html#ref-Fukashiro1981">12</a>]</span>.  </p>
-<p><em>Vertical velocity.</em> Vertical velocities…  </p>
-<p><em>Take-off angle.</em> The take-off angle is the product of the horizontal and vertical take-off velocity, and as such is determined by the combination. The take-off angle is typically highest in the jump, however this naturally differ with technique. Thus, hop-dominant jumpers tend to reach higher take-off angles in the hop and jump-dominant jumpers reach higher angles in the jump.  </p>
-<p><em>Velocity conversion.</em> The velocity conversion is a comparison of the increase in vertical velocity and the decrease of horizontal velocity of each takeoff…<span class="citation">[<a href="references.html#ref-Yu1996">9</a>, <a href="references.html#ref-Liu2012">20</a>]</span></p>
-<p><strong>Take-off leg</strong>  </p>
-<p>Active landing, pawing, horizontal velocity of foot, etc. <span class="citation">[<a href="references.html#ref-Hay1985">21</a>]</span>  </p>
-<p><strong>Free limbs</strong>  </p>
-<p><em>Arm swing.</em> The free limbs are considered to be the arms and the leg not touching the ground during a contact phase. Especially the arm swing has been the subject of much attention. Yu and Andrews <span class="citation">[<a href="references.html#ref-Yu1998">15</a>]</span> found that the arm swing contributes mainly in increasing the vertical velocity and possibly in maintaining balance (definition by <span class="citation">[<a href="references.html#ref-Hay1993">1</a>]</span>), whilst decreasing horizontal velocity. However, there exists different arm swing techniques - a topic which has almost not been investigated. The different types of arm swings are: 1) The single arm, 2) the double arm and 3) the arm-and-a-half technique. These have all been utilized at world-class level and have been combined in different ways (e.g. hop:single arm, step:double arm, jump:double arm). A modelling experiment has suggested that the double-arm swing is benefitial <span class="citation">[<a href="references.html#ref-Allen2010">16</a>]</span>, however more work needs to be done before conclusions can be drawn. It is interesting though, that almost all finalists in the 2017 World Championships, nearly all male triple jumpers employed a double-arm swing, whereas all females used a single-arm technique.  </p>
-<p><em>Free leg.</em></p>
-<p><strong>Posture</strong>  </p>
+<p>Along with each section, we define a set of <em>Key performance indicators (KPIs)</em>. KPIs are the most important variables predicting performance. These differ from sport to sport, and not all are intuitive. At the SportsMechanist we’ve selected the most appropriate KPIs based on scientific literature and biomechanical reports from World Championships.</p>
 </div>
             </section>
 
@@ -152,7 +138,7 @@ Trying to determine the <em>optimal</em> phase ratio has received much scientifi
         </div>
       </div>
 <a href="biomechanics-101.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="key-performance-indicators.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="phase-ratio.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
