--- a/references.html
+++ b/references.html
@@ -76,30 +76,37 @@
 
 <li class="divider"></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Biomechanical analysis</a></li>
-<li class="chapter" data-level="1" data-path="intro.html"><a href="intro.html"><i class="fa fa-check"></i><b>1</b> Preface</a></li>
+<li class="chapter" data-level="" data-path="preface.html"><a href="preface.html"><i class="fa fa-check"></i>Preface</a></li>
 <li class="part"><span><b>I Background</b></span></li>
-<li class="chapter" data-level="2" data-path="biomechanics-101.html"><a href="biomechanics-101.html"><i class="fa fa-check"></i><b>2</b> Biomechanics 101</a></li>
-<li class="chapter" data-level="3" data-path="triple-jump.html"><a href="triple-jump.html"><i class="fa fa-check"></i><b>3</b> Triple Jump</a><ul>
-<li class="chapter" data-level="3.1" data-path="phase-ratio.html"><a href="phase-ratio.html"><i class="fa fa-check"></i><b>3.1</b> Phase ratio</a></li>
-<li class="chapter" data-level="3.2" data-path="velocities.html"><a href="velocities.html"><i class="fa fa-check"></i><b>3.2</b> Velocities</a></li>
-<li class="chapter" data-level="3.3" data-path="take-off-leg-mechanics.html"><a href="take-off-leg-mechanics.html"><i class="fa fa-check"></i><b>3.3</b> Take-off leg mechanics</a></li>
-<li class="chapter" data-level="3.4" data-path="free-limb-mechanics.html"><a href="free-limb-mechanics.html"><i class="fa fa-check"></i><b>3.4</b> Free limb mechanics</a></li>
-<li class="chapter" data-level="3.5" data-path="balance.html"><a href="balance.html"><i class="fa fa-check"></i><b>3.5</b> Balance</a></li>
-<li class="chapter" data-level="3.6" data-path="gender-differences.html"><a href="gender-differences.html"><i class="fa fa-check"></i><b>3.6</b> Gender differences</a></li>
+<li class="chapter" data-level="1" data-path="triple-jump.html"><a href="triple-jump.html"><i class="fa fa-check"></i><b>1</b> Triple Jump</a><ul>
+<li class="chapter" data-level="1.1" data-path="phase-ratio.html"><a href="phase-ratio.html"><i class="fa fa-check"></i><b>1.1</b> Phase ratio</a></li>
+<li class="chapter" data-level="1.2" data-path="velocities.html"><a href="velocities.html"><i class="fa fa-check"></i><b>1.2</b> Velocities</a></li>
+<li class="chapter" data-level="1.3" data-path="take-off-leg-mechanics.html"><a href="take-off-leg-mechanics.html"><i class="fa fa-check"></i><b>1.3</b> Take-off leg mechanics</a></li>
+<li class="chapter" data-level="1.4" data-path="free-limb-mechanics.html"><a href="free-limb-mechanics.html"><i class="fa fa-check"></i><b>1.4</b> Free limb mechanics</a></li>
+<li class="chapter" data-level="1.5" data-path="balance.html"><a href="balance.html"><i class="fa fa-check"></i><b>1.5</b> Balance</a></li>
+<li class="chapter" data-level="1.6" data-path="gender-differences.html"><a href="gender-differences.html"><i class="fa fa-check"></i><b>1.6</b> Gender differences</a></li>
 </ul></li>
-<li class="chapter" data-level="4" data-path="kpi-overview.html"><a href="kpi-overview.html"><i class="fa fa-check"></i><b>4</b> KPI Overview</a></li>
+<li class="chapter" data-level="2" data-path="kpi-overview.html"><a href="kpi-overview.html"><i class="fa fa-check"></i><b>2</b> KPI Overview</a></li>
 <li class="part"><span><b>II Results</b></span></li>
-<li class="chapter" data-level="5" data-path="overview.html"><a href="overview.html"><i class="fa fa-check"></i><b>5</b> Overview</a><ul>
-<li class="chapter" data-level="5.1" data-path="center-of-mass-velocity.html"><a href="center-of-mass-velocity.html"><i class="fa fa-check"></i><b>5.1</b> Center of Mass Velocity</a><ul>
-<li class="chapter" data-level="5.1.1" data-path="center-of-mass-velocity.html"><a href="center-of-mass-velocity.html#horizontal-velocity"><i class="fa fa-check"></i><b>5.1.1</b> Horizontal velocity</a></li>
-<li class="chapter" data-level="5.1.2" data-path="center-of-mass-velocity.html"><a href="center-of-mass-velocity.html#vertical-velocity"><i class="fa fa-check"></i><b>5.1.2</b> Vertical velocity</a></li>
+<li class="chapter" data-level="3" data-path="profile.html"><a href="profile.html"><i class="fa fa-check"></i><b>3</b> Profile</a><ul>
+<li class="chapter" data-level="3.1" data-path="phase-ratio-1.html"><a href="phase-ratio-1.html"><i class="fa fa-check"></i><b>3.1</b> Phase ratio</a><ul>
+<li class="chapter" data-level="3.1.1" data-path="phase-ratio-1.html"><a href="phase-ratio-1.html#commentary"><i class="fa fa-check"></i><b>3.1.1</b> Commentary</a></li>
 </ul></li>
-<li class="chapter" data-level="5.2" data-path="angular-velocity.html"><a href="angular-velocity.html"><i class="fa fa-check"></i><b>5.2</b> Angular Velocity</a><ul>
-<li class="chapter" data-level="5.2.1" data-path="angular-velocity.html"><a href="angular-velocity.html#hip-velocity"><i class="fa fa-check"></i><b>5.2.1</b> Hip velocity</a></li>
+<li class="chapter" data-level="3.2" data-path="velocities-1.html"><a href="velocities-1.html"><i class="fa fa-check"></i><b>3.2</b> Velocities</a><ul>
+<li class="chapter" data-level="3.2.1" data-path="velocities-1.html"><a href="velocities-1.html#commentary-1"><i class="fa fa-check"></i><b>3.2.1</b> Commentary</a></li>
 </ul></li>
-<li class="chapter" data-level="5.3" data-path="ground-reaction-forces.html"><a href="ground-reaction-forces.html"><i class="fa fa-check"></i><b>5.3</b> Ground Reaction Forces</a></li>
+<li class="chapter" data-level="3.3" data-path="take-off-leg-mechanics-1.html"><a href="take-off-leg-mechanics-1.html"><i class="fa fa-check"></i><b>3.3</b> Take-off leg mechanics</a><ul>
+<li class="chapter" data-level="3.3.1" data-path="take-off-leg-mechanics-1.html"><a href="take-off-leg-mechanics-1.html#commentary-2"><i class="fa fa-check"></i><b>3.3.1</b> Commentary</a></li>
 </ul></li>
-<li class="chapter" data-level="6" data-path="conclusion.html"><a href="conclusion.html"><i class="fa fa-check"></i><b>6</b> Conclusion</a></li>
+<li class="chapter" data-level="3.4" data-path="free-limb-mechanics-1.html"><a href="free-limb-mechanics-1.html"><i class="fa fa-check"></i><b>3.4</b> Free limb mechanics</a><ul>
+<li class="chapter" data-level="3.4.1" data-path="free-limb-mechanics-1.html"><a href="free-limb-mechanics-1.html#commentary-3"><i class="fa fa-check"></i><b>3.4.1</b> Commentary</a></li>
+</ul></li>
+<li class="chapter" data-level="3.5" data-path="balance-1.html"><a href="balance-1.html"><i class="fa fa-check"></i><b>3.5</b> Balance</a><ul>
+<li class="chapter" data-level="3.5.1" data-path="balance-1.html"><a href="balance-1.html#commentary-4"><i class="fa fa-check"></i><b>3.5.1</b> Commentary</a></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="4" data-path="kpi-overview-1.html"><a href="kpi-overview-1.html"><i class="fa fa-check"></i><b>4</b> KPI Overview</a></li>
+<li class="chapter" data-level="5" data-path="conclusion.html"><a href="conclusion.html"><i class="fa fa-check"></i><b>5</b> Conclusion</a></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 </ul>
 
@@ -179,11 +186,14 @@
 <div id="ref-Hay1992">
 <p>19. J. G. Hay, The biomechanics of the triple jump: A review. <em>Journal of Sports Sciences</em>, <strong>10</strong> (1992) 343–378. <a href="https://doi.org/10.1080/02640419208729933">https://doi.org/10.1080/02640419208729933</a>.</p>
 </div>
+<div id="ref-Allen2016">
+<p>20. S. J. Allen, M. R. Yeadon, &amp; M. A. King, The effect of increasing strength and approach velocity on triple jump performance. <em>Journal of Biomechanics</em>, <strong>49</strong> (2016) 3796–3802. <a href="https://doi.org/10.1016/j.jbiomech.2016.10.009">https://doi.org/10.1016/j.jbiomech.2016.10.009</a>.</p>
+</div>
 <div id="ref-Liu2012">
-<p>20. H. Liu &amp; B. Yu, Effects of phase ratio and velocity conversion coefficient on the performance of the triple jump. <em>Journal of Sports Sciences</em>, <strong>30</strong> (2012) 1529–1536. <a href="https://doi.org/10.1080/02640414.2012.713502">https://doi.org/10.1080/02640414.2012.713502</a>.</p>
+<p>21. H. Liu &amp; B. Yu, Effects of phase ratio and velocity conversion coefficient on the performance of the triple jump. <em>Journal of Sports Sciences</em>, <strong>30</strong> (2012) 1529–1536. <a href="https://doi.org/10.1080/02640414.2012.713502">https://doi.org/10.1080/02640414.2012.713502</a>.</p>
 </div>
 <div id="ref-Hay1985">
-<p>21. J. G. Hay &amp; J. A. Miller, Techniques Used in the Triple Jump. <em>International Journal of Sport Biomechanics</em>, <strong>1</strong> (1985) 185–196. <a href="https://doi.org/10.1123/ijsb.1.2.185">https://doi.org/10.1123/ijsb.1.2.185</a>.</p>
+<p>22. J. G. Hay &amp; J. A. Miller, Techniques Used in the Triple Jump. <em>International Journal of Sport Biomechanics</em>, <strong>1</strong> (1985) 185–196. <a href="https://doi.org/10.1123/ijsb.1.2.185">https://doi.org/10.1123/ijsb.1.2.185</a>.</p>
 </div>
 </div>
 </div>
